feat(api): return union reactions on event detail
